fixed subheader height shit urghghghghghh

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -97,6 +97,7 @@ header div {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 1rem;
 }
 
 .sub-header a {
