--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -83,6 +83,7 @@ header img{
     filter: invert(0%) sepia(25%);
 }
 header img:hover {
+    background-color: none;
     transform: scale(1.2);
     transition: all .4s ease;
 }
